5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1798_2572.log
== TEST (2019-06-09 16:57:46) 
-- CODE:
vet = array(eval(input("Matriculas: ")))
vcont = zeros(2, dtype=int)
for i in range(0, size(vet)):
	if (vet[i] % 2 == 0):
		vcont[0] = vcont[0] + 1
	else:
		vcont[1] = vcot[1] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:58:21) 
-- CODE:
from numpy import * 
vet = array(eval(input("Matriculas: ")))
vcont = zeros(2, dtype=int)
for i in range(0, size(vet)):
	if (vet[i] % 2 == 0):
		vcont[0] = vcont[0] + 1
	else:
		vcont[1] = vcot[1] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:00:08) 
-- CODE:
from numpy import * 
vet = array(eval(input("Matriculas: ")))
vcont = zeros(2, dtype=int)
for i in range(0, size(vet)):
	if (vet[i] % 2 == 0):
		vcont[0] = vcont[0] + 1
	else:
		vcont[1] = vcont[1] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:03:07) 
-- CODE:
from numpy import * 
vet = array(eval(input("Matriculas: ")))
vcont = zeros(2, dtype=int)
for i in range(0, size(vet)):
	if (vet[i] % 2 == 0):
		vcont[0] = vcont[0] + 1
	else:
		vcont[1] = vcont[1] + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:04:56) 
-- CODE:
from numpy import * 
vet = array(eval(input("Matriculas: ")))
vcont = zeros(2, dtype=int)
for i in range(0, size(vet)):
	if (vet[i] % 2 == 0):
		vcont[0] = vcont[0] + 1
		print("grupo 1")
	else:
		vcont[1] = vcont[1] + 1
		print("grupo 2")
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
